# renkin

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_ja.md  SECURITY.md  deny.toml  mkdocs.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml  security-audit.yml
configs/cascade/: stage1_fast.json  stage2_deep.json
crates/renkin-forward/: Cargo.toml
crates/renkin-forward/src/: lib.rs  main.rs
crates/renkin-kg/: Cargo.toml
crates/renkin-kg/src/: lib.rs
data/: benchmark_targets.smi  building_blocks.smi  chembl_approved_ood.smi  chembl_ood_result.json  templates_extracted.smi  templates_extracted_500.smi  uspto50k_benchmark_result.json  uspto50k_test.smi
data/bench_chunks/: chunk_aa.json  chunk_ab.json  chunk_ac.json  chunk_ad.json  chunk_ae.json  chunk_af.json  chunk_ag.json  chunk_ah.json  chunk_ai.json  chunk_aj.json  chunk_ak.json  chunk_al.json  chunk_am.json  chunk_an.json  chunk_ao.json  chunk_ap.json  chunk_aq.json  chunk_ar.json  chunk_as.json  chunk_at.json  chunk_au.json  chunk_av.json  chunk_aw.json  chunk_ax.json  chunk_ay.json  chunk_az.json  chunk_ba.json  chunk_bb.json  chunk_bc.json  chunk_bd.json  chunk_be.json  chunk_bf.json  chunk_bg.json  chunk_bh.json  chunk_bi.json  chunk_bj.json  chunk_bk.json  chunk_bl.json  chunk_bm.json  chunk_bn.json  (+10 more)
data/bench_chunks_d5/: chunk_aa.json  chunk_ab.json  chunk_ac.json  chunk_ad.json  chunk_ae.json  chunk_af.json  chunk_ag.json  chunk_ah.json  chunk_ai.json  chunk_aj.json  chunk_ak.json  chunk_al.json  chunk_am.json  chunk_an.json  chunk_ao.json  chunk_ap.json  chunk_aq.json  chunk_ar.json  chunk_as.json  chunk_at.json  chunk_au.json  chunk_av.json  chunk_aw.json  chunk_ax.json  chunk_ay.json  chunk_az.json  chunk_ba.json  chunk_bb.json  chunk_bc.json  chunk_bd.json  chunk_be.json  chunk_bf.json  chunk_bg.json  chunk_bh.json  chunk_bi.json  chunk_bj.json  chunk_bk.json  chunk_bl.json  chunk_bm.json  chunk_bn.json  (+10 more)
data/bench_chunks_d5_t500/: chunk_aa.json  chunk_ab.json  chunk_ac.json  chunk_ad.json  chunk_ae.json  chunk_af.json  chunk_ag.json  chunk_ah.json  chunk_ai.json  chunk_aj.json  chunk_ak.json  chunk_al.json  chunk_am.json  chunk_an.json  chunk_ao.json  chunk_ap.json  chunk_aq.json  chunk_ar.json  chunk_as.json  chunk_at.json  chunk_au.json  chunk_av.json  chunk_aw.json  chunk_ax.json  chunk_ay.json  chunk_az.json  chunk_ba.json  chunk_bb.json  chunk_bc.json  chunk_bd.json  chunk_be.json  chunk_bf.json  chunk_bg.json  chunk_bh.json  chunk_bi.json  chunk_bj.json  chunk_bk.json  chunk_bl.json  chunk_bm.json  chunk_bn.json  (+10 more)
data/bench_chunks_t500/: chunk_aa.json  chunk_ab.json  chunk_ac.json  chunk_ad.json  chunk_ae.json  chunk_af.json  chunk_ag.json  chunk_ah.json  chunk_ai.json  chunk_aj.json  chunk_ak.json  chunk_al.json  chunk_am.json  chunk_an.json  chunk_ao.json  chunk_ap.json  chunk_aq.json  chunk_ar.json  chunk_as.json  chunk_at.json  chunk_au.json  chunk_av.json  chunk_aw.json  chunk_ax.json  chunk_ay.json  chunk_az.json  chunk_ba.json  chunk_bb.json  chunk_bc.json  chunk_bd.json  chunk_be.json  chunk_bf.json  chunk_bg.json  chunk_bh.json  chunk_bi.json  chunk_bj.json  chunk_bk.json  chunk_bl.json  chunk_bm.json  chunk_bn.json  (+10 more)
data/hard_cases/: uspto_unsolved.smi
demo/: index.html
docs/: benchmark.md  benchmark_ja.md  index.md
docs/api/: python.md  rust.md  wasm.md
docs/examples/: aspirin.md  druglike.md
docs/getting_started/: installation.md  quickstart.md
docs/playground/: index.html
examples/: renkin_quickstart.ipynb
hooks/: pre-commit
scripts/: bench_stability.sh  extract_hard_cases.py  extract_templates.py  fetch_chembl_approved.py  prepare_emolecules.py  run_benchmark.sh  run_benchmark_chunks.sh  train_template_scorer.py
src/: chem_env.rs  display.rs  lib.rs  main.rs  python.rs  score.rs  scorer.rs  search.rs  trace_test.rs  wasm.rs
tasks/: chematic_requests.md  comparison_report.md  lessons.md  todo.md
