[package]
name = "renkin"
version = "0.1.2"
edition = "2024"
description = "Ultra-fast retrosynthesis engine for computer-aided synthesis planning (CASP) — pure Rust, WASM-ready, Python bindings via PyO3"
repository    = "https://github.com/kent-tokyo/renkin"
homepage      = "https://github.com/kent-tokyo/renkin"
documentation = "https://docs.rs/renkin"
readme        = "README.md"
license       = "MIT"
keywords      = ["retrosynthesis", "cheminformatics", "chemistry", "wasm", "drug-discovery"]
categories    = ["science::computational-chemistry::cheminformatics", "wasm", "command-line-utilities", "algorithms"]
exclude       = [
    "data/building_blocks_500k.smi",
    "data/building_blocks_emolecules*.smi",
    "data/bench_chunks*/**",
    "data/uspto50k_test.smi",
    "data/uspto50k_benchmark_result*.json",
    "data/templates_extracted*.smi",
    "docs/playground/**",
    "tasks/**",
    "scripts/**",
    ".claude/**",
]

[[bin]]
name = "renkin"
path = "src/main.rs"

[[bin]]
name = "renkin-bench"
path = "src/bin/benchmark.rs"

[lib]
name = "renkin"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[features]
default = []
python = ["pyo3/extension-module"]

[dependencies]
chematic = { version = "0.4", features = ["smiles", "chem", "smarts", "rxn"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

# PyO3: Python bindings (optional)
pyo3 = { version = "0.29", optional = true }

# rayon: not available on wasm32 (no threads)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rayon = "1"

# WASM: needed for chematic's internal random usage
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
