[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "renkin"
version = "0.15.0"
description = "Ultra-fast retrosynthesis engine for computer-aided synthesis planning (CASP) — pure Rust, Python bindings via PyO3"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
keywords = ["retrosynthesis", "cheminformatics", "chemistry", "drug-discovery", "casp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.urls]
Homepage   = "https://github.com/kent-tokyo/renkin"
Repository = "https://github.com/kent-tokyo/renkin"
Issues     = "https://github.com/kent-tokyo/renkin/issues"

[tool.maturin]
features      = ["python"]
module-name   = "renkin"
