[package]
name = "renkin-forward"
version = "0.1.0"
edition = "2024"
description = "Template-based forward reaction prediction — renkin workspace"
repository = "https://github.com/kent-tokyo/renkin"
license = "MIT"

[[bin]]
name = "renkin-forward"
path = "src/main.rs"

[dependencies]
renkin      = { path = "../.." }
chematic    = { version = "0.4", features = ["smiles", "chem", "smarts", "rxn"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
